--- a/src/App.css
+++ b/src/App.css
@@ -8,15 +8,22 @@
 
 .calcContainer {
   width: 500px;
-  height: 680px;
+  height: 720px;
   background-color:#618685; 
   border-radius: 8%;
   padding: 15px 5px 0 8px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
+.dropDownComponent {
+  position: absolute;
+  z-index: 1;
+  padding: 10px 0px 15px 135px;
+}
+
 .keyboard {
-  padding: 8px 0 0 12px;
+  padding: 50px 0 0 12px;
+  z-index: 0;
 }
 
 .row {
